feat(api): add an api for fetching readable content of a bookmark. #2660
